# order-service

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/health/: router.py
app/orders/: domain.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/orders/repositories/: in_memory.py  repository.py
app/routers/: health.py  orders.py
app/schemas/: orders.py
app/shared/idempotency/: in_memory.py  repository.py  schemas.py
tests/: test_health.py  test_orders.py
tests/fixtures/: orders.py
