[project]
name = "order-service"
version = "0.1.0"
description = "A backend service built to practice modern backend engineering techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.9.0",
    "pytest>=9.1.1",
]
